--- a/day2_clock/index.css
+++ b/day2_clock/index.css
@@ -32,7 +32,7 @@ body,html {
 	position:relative;
 }
 
-.clock-hand {
+.clock__hand {
 	position:absolute;
 	width:50%;
 	height:4px;
@@ -40,6 +40,6 @@ body,html {
 	top:50%;
 	transform: rotate(90deg);
 	transform-origin: 100%;
-	transition: all 0.5s;
+	transition: all 0.05s;
 	transition-timing-function: cubic-bezier(0, 1.64, 0.35, 0.8);
 }
