--- a/day2_clock/index.css
+++ b/day2_clock/index.css
@@ -29,6 +29,13 @@ body,html {
 	border-radius: 50%;
 	width: 200px;
 	height: 200px; 
+	position: relative;
+	padding: 4px;
+}
+
+.clock__face {
+	width: 100%;
+	height: 100%;
 	position:relative;
 }
 
